Problem 1 vector definitions, add heading, and delete default/template code

--- a/p8105_hw1_cj2493.md
+++ b/p8105_hw1_cj2493.md
@@ -1,33 +1,17 @@
 p8105\_hw1\_cj2493
 ================
+Courtney Johnson
+2018-9-13
 
-GitHub Documents
-----------------
-
-This is an R Markdown format used for publishing markdown documents to GitHub. When you click the **Knit** button all R code chunks are run and a markdown file (.md) suitable for publishing to GitHub is generated.
-
-Including Code
---------------
-
-You can include R code in the document as follows:
+Problem 1
+---------
 
 ``` r
-summary(cars)
+set.seed(1)
+problem_1_df = tibble(
+  vec_numerical = runif(10, min = 0, max = 5),
+  vec_logical = vec_numerical > 2,
+  vec_char = c("Courtney", "Patrick", "Evelyn", "Glenn", "Sue", "Glen", "Jenny", "Kayla", "Lindsay", "Derick"),
+  vec_factor = c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male")
+)
 ```
-
-    ##      speed           dist       
-    ##  Min.   : 4.0   Min.   :  2.00  
-    ##  1st Qu.:12.0   1st Qu.: 26.00  
-    ##  Median :15.0   Median : 36.00  
-    ##  Mean   :15.4   Mean   : 42.98  
-    ##  3rd Qu.:19.0   3rd Qu.: 56.00  
-    ##  Max.   :25.0   Max.   :120.00
-
-Including Plots
----------------
-
-You can also embed plots, for example:
-
-![](p8105_hw1_cj2493_files/figure-markdown_github/pressure-1.png)
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
