--- a/p8105_hw1_cj2493.rmd
+++ b/p8105_hw1_cj2493.rmd
@@ -1,30 +1,23 @@
 ---
 title: "p8105_hw1_cj2493"
+author: "Courtney Johnson"
+date: 2018-9-13
 output: github_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
 ```
 
-## GitHub Documents
+## Problem 1
 
-This is an R Markdown format used for publishing markdown documents to GitHub. When you click the **Knit** button all R code chunks are run and a markdown file (.md) suitable for publishing to GitHub is generated.
-
-## Including Code
-
-You can include R code in the document as follows:
-
-```{r cars}
-summary(cars)
+```{r}
+set.seed(1)
+problem_1_df = tibble(
+  vec_numerical = runif(10, min = 0, max = 5),
+  vec_logical = vec_numerical > 2,
+  vec_char = c("Courtney", "Patrick", "Evelyn", "Glenn", "Sue", "Glen", "Jenny", "Kayla", "Lindsay", "Derick"),
+  vec_factor = c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male")
+)
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
