First attempt at taking means of the vectors; adding comments about what works and what doesn't.

--- a/p8105_hw1_cj2493.md
+++ b/p8105_hw1_cj2493.md
@@ -14,4 +14,23 @@ problem_1_df = tibble(
   vec_char = c("Courtney", "Patrick", "Evelyn", "Glenn", "Sue", "Glen", "Jenny", "Kayla", "Lindsay", "Derick"),
   vec_factor = c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male")
 )
+
+numerical_mean = mean(problem_1_df$vec_numerical)
+logical_mean = mean(problem_1_df$vec_logical)
+char_mean = mean(problem_1_df$vec_char)
 ```
+
+    ## Warning in mean.default(problem_1_df$vec_char): argument is not numeric or
+    ## logical: returning NA
+
+``` r
+factor_mean = mean(problem_1_df$vec_factor)
+```
+
+    ## Warning in mean.default(problem_1_df$vec_factor): argument is not numeric
+    ## or logical: returning NA
+
+What works and doesn't work when taking means?
+----------------------------------------------
+
+The mean(x) function works for the numerical and logical vectors, but not for the character and factor vectors.
