--- a/p8105_hw1_cj2493.rmd
+++ b/p8105_hw1_cj2493.rmd
@@ -20,4 +20,13 @@ problem_1_df = tibble(
   vec_char = c("Courtney", "Patrick", "Evelyn", "Glenn", "Sue", "Glen", "Jenny", "Kayla", "Lindsay", "Derick"),
   vec_factor = c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male")
 )
+
+numerical_mean = mean(problem_1_df$vec_numerical)
+logical_mean = mean(problem_1_df$vec_logical)
+char_mean = mean(problem_1_df$vec_char)
+factor_mean = mean(problem_1_df$vec_factor)
 ```
+
+## What works and doesn't work when taking means?
+
+The mean(x) function works for the numerical and logical vectors, but not for the character and factor vectors.
