--- a/p8105_hw1_cj2493.md
+++ b/p8105_hw1_cj2493.md
@@ -12,7 +12,8 @@ problem_1_df = tibble(
   vec_numerical = runif(10, min = 0, max = 5),
   vec_logical = vec_numerical > 2,
   vec_char = c("Courtney", "Patrick", "Evelyn", "Glenn", "Sue", "Glen", "Jenny", "Kayla", "Lindsay", "Derick"),
-  vec_factor = c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male")
+  vec_fac = c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male"),
+  vec_factor = factor(vec_fac)
 )
 
 numerical_mean = mean(problem_1_df$vec_numerical)
@@ -34,3 +35,16 @@ What works and doesn't work when taking means?
 ----------------------------------------------
 
 The mean(x) function works for the numerical and logical vectors, but not for the character and factor vectors.
+
+What happened?
+--------------
+
+The logical and factor vectors were converted to a numeric vector, but the character vector was not.
+
+``` r
+char_to_factor = factor(problem_1_df$vec_char)
+convert_char_2 = as.numeric(char_to_factor)
+```
+
+Problem 2
+---------
