--- a/p8105_hw1_cj2493.md
+++ b/p8105_hw1_cj2493.md
@@ -12,8 +12,7 @@ problem_1_df = tibble(
   vec_numerical = runif(10, min = 0, max = 5),
   vec_logical = vec_numerical > 2,
   vec_char = c("Courtney", "Patrick", "Evelyn", "Glenn", "Sue", "Glen", "Jenny", "Kayla", "Lindsay", "Derick"),
-  vec_fac = c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male"),
-  vec_factor = factor(vec_fac)
+  vec_factor = factor(c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male"))
 )
 
 numerical_mean = mean(problem_1_df$vec_numerical)
@@ -44,7 +43,30 @@ The logical and factor vectors were converted to a numeric vector, but the chara
 ``` r
 char_to_factor = factor(problem_1_df$vec_char)
 convert_char_2 = as.numeric(char_to_factor)
+factor_to_char = as.character(problem_1_df$vec_factor)
+convert_factor_2 = as.numeric(factor_to_char)
 ```
+
+    ## Warning: NAs introduced by coercion
+
+What happened?
+--------------
+
+Now, the character vector was successfully converted to a numeric vector with a factor step in the middle. However, now we cannot convert the factor vector to numeric via a character step in the middle.
 
 Problem 2
 ---------
+
+``` r
+set.seed(1)
+problem_2_df = tibble(
+  x = rnorm(1000),
+  y = rnorm(1000),
+  is_positive = x + y > 0,
+  is_positive_num = as.numeric(is_positive),
+  is_positive_factor = factor(is_positive_num)
+)
+```
+
+Description of the Vector
+-------------------------
