add inline R code and scatter plots for problem 2

--- a/p8105_hw1_cj2493.md
+++ b/p8105_hw1_cj2493.md
@@ -30,13 +30,11 @@ factor_mean = mean(problem_1_df$vec_factor)
     ## Warning in mean.default(problem_1_df$vec_factor): argument is not numeric
     ## or logical: returning NA
 
-What works and doesn't work when taking means?
-----------------------------------------------
+### What works and doesn't work when taking means?
 
 The mean(x) function works for the numerical and logical vectors, but not for the character and factor vectors.
 
-What happened?
---------------
+### What happened?
 
 The logical and factor vectors were converted to a numeric vector, but the character vector was not.
 
@@ -49,8 +47,7 @@ convert_factor_2 = as.numeric(factor_to_char)
 
     ## Warning: NAs introduced by coercion
 
-What happened?
---------------
+### What happened?
 
 Now, the character vector was successfully converted to a numeric vector with a factor step in the middle. However, now we cannot convert the factor vector to numeric via a character step in the middle.
 
@@ -68,5 +65,36 @@ problem_2_df = tibble(
 )
 ```
 
-Description of the Vector
--------------------------
+### Description of the Vector
+
+The size of the dataset is 1000 by 1000. The mean of x is -0.0116481 and the median of x is -0.0353242. The proportion of cases for which the logical vector is true is 0.49.
+
+``` r
+logical_plot = ggplot(problem_2_df, aes(x = y, y = x, color = is_positive)) + geom_point()
+numeric_plot = ggplot(problem_2_df, aes(x = y, y = x, color = is_positive_num)) + geom_point()
+factor_plot = ggplot(problem_2_df, aes(x = y, y = x, color = is_positive_factor)) + geom_point()
+
+logical_plot
+```
+
+![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot-1.png)
+
+``` r
+numeric_plot
+```
+
+![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot-2.png)
+
+``` r
+factor_plot
+```
+
+![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot-3.png)
+
+``` r
+ggsave("logical_plot.pdf", plot = logical_plot, path = "./")
+```
+
+    ## Saving 7 x 5 in image
+
+### Comments
