--- a/p8105_hw1_cj2493.rmd
+++ b/p8105_hw1_cj2493.rmd
@@ -12,7 +12,9 @@ library(tidyverse)
 
 ## Problem 1
 
-```{r, variable_definition}
+Create a data frame that includes a random sample of size 10 from a uniform [0,5] distribution, a logical vector indicating whether the elements of the sample are greater than 2, a length-10 character vector, and a length-10 factor vector.
+
+```{r, data_frame_1_definition}
 set.seed(1)
 problem_1_df = tibble(
   vec_numerical = runif(10, min = 0, max = 5),
@@ -20,16 +22,20 @@ problem_1_df = tibble(
   vec_char = c("Courtney", "Patrick", "Evelyn", "Glenn", "Sue", "Glen", "Jenny", "Kayla", "Lindsay", "Derick"),
   vec_factor = factor(c("female", "male", "female", "male", "female", "male", "female", "female", "female", "male"))
 )
+```
 
+Now, attempt to take the means of the vectors, and explain what happens.
+
+```{r, means}
 numerical_mean = mean(problem_1_df$vec_numerical)
 logical_mean = mean(problem_1_df$vec_logical)
 char_mean = mean(problem_1_df$vec_char)
 factor_mean = mean(problem_1_df$vec_factor)
 ```
 
-### What works and doesn't work when taking means?
+The mean(x) function works for the numerical and logical vectors, but not for the character and factor vectors. For the character and factor vectors, NAs are returned because mean(x) only accepts input in numerical or logical forms.
 
-The mean(x) function works for the numerical and logical vectors, but not for the character and factor vectors.
+Now, attempt to use as.numeric() on the logical, character, and factor vectors.
 
 ```{r, variable_conversion, include = FALSE}
 convert_logical = as.numeric(problem_1_df$vec_logical)
@@ -37,9 +43,9 @@ convert_char = as.numeric(problem_1_df$vec_char)
 convert_factor = as.numeric(problem_1_df$vec_factor)
 ```
 
-### What happened?
-
 The logical and factor vectors were converted to a numeric vector, but the character vector was not. 
+
+Now, convert the character vector to a factor vector, and then try as.numeric() again. Also, convert the factor vector to a character vecotr and try as.numeric() again. 
 
 ```{r, convert_char}
 char_to_factor = factor(problem_1_df$vec_char)
@@ -48,13 +54,13 @@ factor_to_char = as.character(problem_1_df$vec_factor)
 convert_factor_2 = as.numeric(factor_to_char)
 ```
 
-### What happened?
-
-Now, the character vector was successfully converted to a numeric vector with a factor step in the middle. However, now we cannot convert the factor vector to numeric via a character step in the middle. 
+This time, the character vector was successfully converted to a numeric vector by using an intermediate factor vector. However, we cannot convert the factor vector to numeric with an intermediate character vector. 
 
 ## Problem 2
 
-```{r, data_frame_definition}
+Create a data frame of x, y (both random samples of size 1000 from a normal distribution), a logical vector indicating whether x + y > 0, a numeric vector made by coercing the logical vector, and a factor vector made by coercing the numeric vector.
+
+```{r, data_frame_2_definition}
 set.seed(1)
 problem_2_df = tibble(
   x = rnorm(1000),
@@ -65,11 +71,13 @@ problem_2_df = tibble(
 )
 ```
 
-### Description of the Vector
+Describe the Vector with inline R code:
 
 The size of the dataset is `r length(problem_2_df$x) ` by `r length(problem_2_df$y)`. 
 The mean of x is `r mean(problem_2_df$x)` and the median of x is `r median(problem_2_df$x)`. 
 The proportion of cases for which the logical vector is true is `r sum(problem_2_df$is_positive_num)/1000`.
+
+Now, make scatterplots of y vs x, alternatively coloring points using the logical, numeric, and factor vectors.
 
 ```{r, scatter_plot}
 logical_plot = ggplot(problem_2_df, aes(x = y, y = x, color = is_positive)) + geom_point()
@@ -82,7 +90,5 @@ factor_plot
 
 ggsave("logical_plot.pdf", plot = logical_plot, path = "./")
 ```
-
-### Comments
 
 The color options for the logical and factor plots are the same; they both only have two options. This is because there are only discrete different options for values in these vectors (true or false, and the given levels). However, the color options for the numeric plot exists on a gradient, because in a numeric vector, the values can be anything from negative infinity to positive inifinity. 
