--- a/p8105_hw1_cj2493.md
+++ b/p8105_hw1_cj2493.md
@@ -71,33 +71,32 @@ problem_2_df = tibble(
 )
 ```
 
-Describe the Vector with inline R code:
+Describe the Data with inline R code:
 
-The size of the dataset is 1000 by 1000. The mean of x is -0.0116481 and the median of x is -0.0353242. The proportion of cases for which the logical vector is true is 0.49.
+The size of the dataset is 5 vectors with 1000 observations in each. The mean of x is -0.0116481 and the median of x is -0.0353242. The proportion of cases for which the logical vector is true is 0.49.
 
 Now, make scatterplots of y vs x, alternatively coloring points using the logical, numeric, and factor vectors.
 
 ``` r
-logical_plot = ggplot(problem_2_df, aes(x = y, y = x, color = is_positive)) + geom_point()
-numeric_plot = ggplot(problem_2_df, aes(x = y, y = x, color = is_positive_num)) + geom_point()
-factor_plot = ggplot(problem_2_df, aes(x = y, y = x, color = is_positive_factor)) + geom_point()
-
+logical_plot = ggplot(problem_2_df, aes(x = x, y = y, color = is_positive)) + geom_point()
 logical_plot
 ```
 
-![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot-1.png)
+![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot_1-1.png)
 
 ``` r
+numeric_plot = ggplot(problem_2_df, aes(x = x, y = y, color = is_positive_num)) + geom_point()
 numeric_plot
 ```
 
-![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot-2.png)
+![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot_2-1.png)
 
 ``` r
+factor_plot = ggplot(problem_2_df, aes(x = x, y = y, color = is_positive_factor)) + geom_point()
 factor_plot
 ```
 
-![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot-3.png)
+![](p8105_hw1_cj2493_files/figure-markdown_github/scatter_plot_3-1.png)
 
 ``` r
 ggsave("logical_plot.pdf", plot = logical_plot, path = "./")
